--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "task2/lib/forge-std"]
 	path = task2/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "task2/lib/openzeppelin-contracts"]
+	path = task2/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
