--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "task2/lib/openzeppelin-contracts"]
 	path = task2/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "task3/lib/forge-std"]
+	path = task3/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
