--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "task3/lib/forge-std"]
 	path = task3/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "task4/lib/forge-std"]
+	path = task4/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
